--- a/qualifications.yml
+++ b/qualifications.yml
@@ -1,21 +1,27 @@
-# A fully-trained programmer should
 ---
-title: 'Have demonstrated understanding of Ruby core methods / Rails object extensions'
+title: 'Configure your laptop for development'
 description: >
+  go to https://strap.umasstransit.it/ and follow the instructions.
 subtasks:
-  - 'Ruby object types'
-  - 'Methods and functionality brought by Rails (try, 1.week, etc.)'
 ---
-title: 'Have demonstrated familiarity with MVC architecture and the Rails asset pipeline'
+title: 'Join UMTS on Github'
 description: >
+  Ask one of your supervisors or team leaders to get you added to
+  the relevant groups in our Github organization.
 subtasks:
-  - 'When to place logic in controller / model'
-  - 'What not to put in a view'
-  - 'Partials'
-  - 'Working securely with params (guarding at the borders)'
 ---
-title: 'Routing, especially member vs. collection routes'
+title: 'Read through employment documents'
 description: >
+  Some boring--but important--administrative stuff.
 subtasks:
-  - 'Default resource CRUD routes'
-  - 'Difference between GET and POST / links and buttons'
+  - 'Read'
+  - ''
+  - ''
+  - ''
+---
+title: 'Join Slack'
+description: >
+  We use [Slack](https://slack.com/) for communication every day.
+  You can download the desktop version or use the web version, whichever suits you.
+  Ask a supervisor to invite you to our Slack team and add you to the relevant channels.
+---
