can share the folder. It is not public.

--- a/qualifications.yml
+++ b/qualifications.yml
@@ -21,7 +21,7 @@ subtasks:
 ---
 title: Read the transportation programmer policies
 description: >
-  This document lives in our [box](https://umass.app.box.com) folder called 'Programmer Training Documents'.
+  This document lives in our programmer training [box folder](https://umass.app.box.com/folder/77237337598)
 title: Join Slack
 description: >
   We use [Slack](https://slack.com/) for communication every day. After your invitation to our
