all of the issues are technically optional if one can demonstrate competence.

--- a/qualifications.yml
+++ b/qualifications.yml
@@ -58,7 +58,7 @@ description: >
   - [Learn enough Ruby to be dangerous](https://www.learnenough.com/ruby-tutorial/hello_world)
   - [Ruby Koans](http://rubykoans.com/)
 ---
-title: Complete a command line tutorial (optional)
+title: Complete a command line tutorial
 description: >
   Having a good grasp of the command line is essential for working in our team,
   as we use the command line every single day for various tasks
