don't suggest non-free tutorials

--- a/qualifications.yml
+++ b/qualifications.yml
@@ -62,11 +62,10 @@ description: >
 ---
 title: Complete a ruby tutorial
 description: >
-  There are many Ruby tutorials available which you can choose from.
-  Pick one from this list, or if you find one you like better, get approval from your supervisor.
-  When completed, link to it in a comment on this issue to close it.
-  - [Learn enough Ruby to be dangerous](https://www.learnenough.com/ruby-tutorial/hello_world)
-  - [Ruby Koans](http://rubykoans.com/)
+  There are many Ruby tutorials available which you can choose from. With your
+  umass login you can access O'Reilly's learning tutorials [here](https://learning.oreilly.com/videos/ruby-fundamentals/300000006A0154),
+  or you can download the [Ruby Koans](http://rubykoans.com/). If neither of those
+  options appeal to you you may choose another tutorial with your supervisor's approval.
 ---
 title: Demonstrate understanding of Ruby core methods / Rails object extensions
 description: >
