we don't use Slack.

--- a/qualifications.yml
+++ b/qualifications.yml
@@ -21,10 +21,11 @@ title: Read the transportation programmer policies
 description: >
   This document lives in our programmer training [box folder](https://umass.app.box.com/folder/77237337598)
 ---
-title: Join Slack
+title: Join Teams
 description: >
-  We use [Slack](https://slack.com/) for communication every day. After your invitation to our
-  Slack team, you can download the desktop version or use the web version, whichever suits you.
+  We use [Microsoft Teams](https://www.umass.edu/it/disruptionresilience/communication-collaboration#Communicate%20with%20Teams%20&%20Peers)
+  for communication every day. We will invite you to our team, after which you can
+  download the desktop version or use the web version, whichever suits you.
 ---
 title: Choose a text editor
 description: >
