short and sweet

--- a/qualifications.yml
+++ b/qualifications.yml
@@ -24,9 +24,7 @@ description: >
 title: Join Teams
 description: >
   We use [Microsoft Teams](https://aka.ms/mstfw) for communication every day.
-  We will make a new account for you for work which will be your UMass username-AF
-  and add that account to our team. For example, if you log in to spire as jsmith@umass.edu, your new account name
-  will be jsmith-AF. You should log into teams with this account.
+  Log into teams with your "-af" account.
 ---
 title: Choose a text editor
 description: >
