beyond chapter 3 is paid now, however, the basics are covered in the free section.

--- a/qualifications.yml
+++ b/qualifications.yml
@@ -37,7 +37,7 @@ title: Complete a command line tutorial
 description: >
   Having a good grasp of the command line is essential for working in our team,
   as we use the command line every single day for various tasks
-  Use [this tutorial](https://www.learnenough.com/command-line-tutorial/basics)
+  Use the first couple chapters of [this tutorial](https://www.learnenough.com/command-line-tutorial/basics)
   or another approved tutorial to brush up on your basics, and link to it in a
   comment to close this issue.
 ---
