line break was bothering me

--- a/qualifications.yml
+++ b/qualifications.yml
@@ -44,8 +44,8 @@ description: >
 title: Complete a git tutorial
 description: >
   We use Git in combination with Github to work collaboratively on our code.
-  Complete [this](https://www.learnenough.com/git-tutorial/getting_started) or another
-  approved tutorial and link to it in a comment to close this issue.
+  Complete [this](https://learning.oreilly.com/videos/essential-git/200000006A0403)
+  or another approved tutorial and link to it in a comment to close this issue.
 ---
 title: Complete a Rails Tutorial
 description: >
