a different place to explain how O'Reilly works would be good

--- a/qualifications.yml
+++ b/qualifications.yml
@@ -61,9 +61,9 @@ description: >
 ---
 title: Complete a ruby tutorial
 description: >
-  There are many Ruby tutorials available which you can choose from. With your
-  umass login you can access O'Reilly's learning tutorials for free. [This](https://learning.oreilly.com/videos/ruby-fundamentals/300000006A0154)
-  is a good tutorial, or you can download the [Ruby Koans](http://rubykoans.com/). If neither of those
+  There are many Ruby tutorials available which you can choose from.
+  [This](https://learning.oreilly.com/videos/ruby-fundamentals/300000006A0154)
+  is a good tutorial, or you can download the [Ruby Koans](http://rubykoans.com/). If neither of those.
   options appeal to you you may choose another tutorial with your supervisor's approval.
 ---
 title: Demonstrate understanding of Ruby core methods / Rails object extensions
