don't put a priod

--- a/qualifications.yml
+++ b/qualifications.yml
@@ -64,7 +64,7 @@ title: Complete a ruby tutorial
 description: >
   There are many Ruby tutorials available which you can choose from. Log in for
   free using your UMass account and watch [these videos](https://learning.oreilly.com/videos/ruby-fundamentals/300000006A0154),
-  or you can download the [Ruby Koans](http://rubykoans.com/). If neither of those.
+  or you can download the [Ruby Koans](http://rubykoans.com/). If neither of those
   options appeal to you you may choose another tutorial with your supervisor's approval.
 ---
 title: Demonstrate understanding of Ruby core methods / Rails object extensions
