--- a/qualifications.yml
+++ b/qualifications.yml
@@ -3,7 +3,7 @@ title: Configure your laptop for development
 description: >
   go to https://strap.umasstransit.it/ and follow the instructions.
 ---
-title: Set up Github
+title: Set up GitHub
 description: >
   [Login to or sign up for GitHub.](https://github.com/)
 subtasks:
