--- a/qualifications.yml
+++ b/qualifications.yml
@@ -7,7 +7,7 @@ title: Set up GitHub
 description: >
   [Login to or sign up for GitHub.](https://github.com/)
 subtasks:
-  - Set up two-factor authentication. We deal with some sensitive data.
+  - Set up two-factor authentication.
   - Tell us your username so we can add you to our organization.
   - Your notification settings for Github can be found [here](https://github.com/settings/notifications).
     The minimum we require is that you have 'Email' checked under the header 'Participating'.
