--- a/qualifications.yml
+++ b/qualifications.yml
@@ -9,7 +9,7 @@ description: >
 subtasks:
   - Set up two-factor authentication.
   - Tell us your username so we can add you to our organization.
-  - Your notification settings for Github can be found [here](https://github.com/settings/notifications).
+  - Your notification settings for GitHub can be found [here](https://github.com/settings/notifications).
     The minimum we require is that you have 'Email' checked under the header 'Participating'.
   - You should clone repositories using the SSH URL from now on. Please follow the instructions
     for [connecting to Github using SSH.](https://help.github.com/en/github/authenticating-to-github/connecting-to-github-with-ssh)
