Update qualifications with new links

--- a/qualifications.yml
+++ b/qualifications.yml
@@ -25,7 +25,7 @@ subtasks:
 ---
 title: Read the transportation programmer policies
 description: >
-  This document lives in our programmer training [box folder](https://umass.app.box.com/folder/77237337598)
+  This document lives in [one-drive](https://umass-my.sharepoint.com/). Ask Adam for access.
 ---
 title: Join Teams
 description: >
@@ -51,7 +51,7 @@ title: Complete a git tutorial
 description: >
   We use Git in combination with Github to work collaboratively on our code.
   Log in to O'Reilly's learning tools for free with your UMass account and
-  complete [this](https://learning.oreilly.com/videos/essential-git/200000006A0403)
+  complete [this](https://learning.oreilly.com/videos/git-essentials-become/9781800565630/)
   or another approved tutorial and link to it in a comment to close this issue.
 ---
 title: Complete a Rails Tutorial
