--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,39 @@
 language: ruby
+os: linux
 dist: focal
+
 cache:
   directories:
     - vendor/gems
+
+env:
+  global:
+    - CC_TEST_REPORTER_ID=953f23fe0b76394989c8bf5f2d08c8ebe5573d4d84b612ae9689373bb5dad105
+
+before_install:
+  - nvm install 'lts/*'
+  - nvm use 'lts/*'
+  - npm i -g yarn
+  - gem update --system
+  - gem install bundler
+
 install:
   - script/setup
+
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+
+branches:
+  only:
+    - main
+
+notifications:
+  email:
+    on_success: never
+    on_failure: change
+    recipients: programmers@admin.umass.edu
