--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
   - npm i -g yarn
   - gem update --system
   - gem install bundler
+  - bundle config set --local path vendor/gems
 
 install:
   - script/setup
