--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,6 +13,7 @@ Layout/LineLength:
 
 Metrics/BlockLength:
   IgnoredMethods:
+    - context
     - describe
 
 RSpec/DescribeClass:
@@ -22,3 +23,6 @@ RSpec/DescribeClass:
 RSpec/MultipleMemoizedHelpers:
   Exclude:
     - 'spec/requests/**/*'
+
+RSpec/NestedGroups:
+  Max: 4
