chore: move programmer policies

--- a/config/qualifications.yml
+++ b/config/qualifications.yml
@@ -1,4 +1,8 @@
 ---
+title: Read the transportation programmer policies
+description: >
+  This document lives in [one-drive](https://umass-my.sharepoint.com/).
+---
 title: Configure your laptop for development
 description: >
   go to https://strap.umasstransit.it/ and follow the instructions.
@@ -22,10 +26,6 @@ subtasks:
   - '[Security Checklist](https://www.umass.edu/it/support/security/security-checklist-university-owned-computers)'
   - '[Understanding Sensitive Data](https://www.umass.edu/it/support/security/understand-sensitive-data-umass-amherst)'
   - '[Data Classification](https://www.umass.edu/it/support/security/data-classification-umass-amherst)'
----
-title: Read the transportation programmer policies
-description: >
-  This document lives in [one-drive](https://umass-my.sharepoint.com/). Ask Adam for access.
 ---
 title: Join Teams
 description: >
