--- a/config/qualifications.yml
+++ b/config/qualifications.yml
@@ -54,7 +54,14 @@ description: >
   complete [this](https://learning.oreilly.com/videos/git-essentials-become/9781800565630/)
   or another approved tutorial and link to it in a comment to close this issue.
 ---
-title: Complete a Rails Tutorial
+title: Complete a ruby tutorial
+description: >
+  There are many Ruby tutorials available which you can choose from. Log in for
+  free using your UMass account and watch [these videos](https://learning.oreilly.com/videos/ruby-fundamentals/300000006A0154),
+  or you can download the [Ruby Koans](http://rubykoans.com/). If neither of those
+  options appeal to you you may choose another tutorial with your supervisor's approval.
+---
+title: Complete a rails Tutorial
 description: >
   The current tutorial in use is Michael Hartl's [Ruby on Rails Tutorial](https://learning.oreilly.com/library/view/ruby-on-rails/9780136702726/).
   Log in for free using your UMass account to O'Reilly or, if you wish to use an alternate tutorial, talk to your supervisor.
@@ -66,12 +73,16 @@ description: >
     Since you'll be deploying code to production in a few short months, you can skip setting up a heroku account
     and all related steps.
 ---
-title: Complete a ruby tutorial
+title: Demonstrate understanding of correct and proper git usage
 description: >
-  There are many Ruby tutorials available which you can choose from. Log in for
-  free using your UMass account and watch [these videos](https://learning.oreilly.com/videos/ruby-fundamentals/300000006A0154),
-  or you can download the [Ruby Koans](http://rubykoans.com/). If neither of those
-  options appeal to you you may choose another tutorial with your supervisor's approval.
+  Show that you understand how to properly use Git by writing commits that
+  generally relate to atomic features or thoughts. Make sure you know how to
+  resolve a merge conflict correctly.
+---
+title: Submit a pull request for review
+description: >
+  Use effective descriptions that provide context of code and rationale for change.
+  Tag some related issues.
 ---
 title: Demonstrate understanding of Ruby core methods / Rails object extensions
 description: >
@@ -98,27 +109,16 @@ subtasks:
   - Demonstrate understanding of how to use routes (a link, a redirect, or creating routes)
   - Use params in a controller
 ---
-title: Demonstrate understanding of correct and proper git usage
+title: Display an understanding of front-end development
 description: >
-  Show that you understand how to properly use Git by writing commits that
-  generally relate to atomic features or thoughts. Make sure you know how to
-  resolve a merge conflict correctly.
----
-title: Submit a pull request for review
-description: >
-  Use effective descriptions that provide context of code and rationale for change.
-  Tag some related issues.
----
-title: have given feedback on another programmers code
-description: >
-  Ask helpful questions/suggest alternatives on someone else's code
+  Use CSS to apply styling to pages, and construct some HAML or ERB. Select
+  DOM elements using JQuery.
 ---
 title: display a good understanding of how and why to write tests
 description: >
   Demonstrate knowledge of basic model/controller/system test structure.
   Demonstrate understanding of mocks/stubs and what purpose they serve.
 ---
-title: Display an understanding of front-end development
+title: have given feedback on another programmers code
 description: >
-  Use CSS to apply styling to pages, and construct some HAML or ERB. Select
-  DOM elements using JQuery.
+  Ask helpful questions/suggest alternatives on someone else's code
